# rust-cli

./: .gitignore  Cargo.toml
data/: test.txt
src/: main.rs  rest_client.rs
