[package]
name = "project"
version = "0.1.0"
authors = ["Diego Yegros"]
edition = "2021"

default-run = "mycli"

[[bin]]
name = "mycli"
path = "src/main.rs"

[[bin]]
name = "rest-client"
path = "src/rest_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }